fixes td version, works  october 2024

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ add_subdirectory(libtgvoip)
 
 find_package(PkgConfig REQUIRED)
 find_package(Threads REQUIRED)
-find_package(Td REQUIRED)
+find_package(Td 1.8.37 REQUIRED)
 find_package(spdlog 0.17 REQUIRED)
 pkg_check_modules(PJSIP libpjproject>=2.8 REQUIRED)
 pkg_check_modules(OPUS opus REQUIRED)
